--- a/Webshop/Bootstrap/home.html
+++ b/Webshop/Bootstrap/home.html
@@ -36,7 +36,7 @@
     <!-- bottom navbar -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ff0000;">
       <div class="container-fluid">
-        <a class="navbar-brand text-light" href="#"><strong>Heatseekers</strong></a>
+        <!-- <a class="navbar-brand text-light" href="#"><strong>Heatseekers</strong></a> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,34 +62,34 @@
         </div>
       </div>
     </nav>
-    <div id="mainCarousel" class="carousel slide carousel-fade mb-4" data-ride="carousel">
+    <div id="mainCarousel" class="carousel slide carousel-fade d-none d-sm-block" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/carousel1.jpeg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Eat spicy</h5>
-            <p>At Heatseekers, every day can be hot and spicy!</p>
+            <h1 class="text-shadow">Eat spicy</h1>
+            <p class="text-shadow"><strong>At Heatseekers, every day can be hot and spicy!</strong></p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="img/carousel2.jpeg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Eat spicy</h5>
-            <p>At Heatseekers, every day can be hot and spicy!</p>
+            <h1 class="text-shadow">Enjoy the heat</h1>
+            <p class="text-shadow"><strong>At Heatseekers, nothing is hot enough!</strong></p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="img/carousel3.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Eat spicy</h5>
-            <p>At Heatseekers, every day can be hot and spicy!</p>
+            <h1 class="text-shadow">Spiceheads unite</h1>
+            <p class="text-shadow"><strong>At Heatseekers, you'll find all the spice you need!</strong></p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="img/carousel4.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Eat spicy</h5>
-            <p>At Heatseekers, every day can be hot and spicy!</p>
+            <h1 class="text-shadow">Free the spice</h1>
+            <p class="text-shadow"><strong>At Heatseekers, we release the heat!</strong></p>
           </div>
         </div>
       </div>
@@ -102,39 +102,64 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <div class="container">
-      <h1 class="display-4">Welcome to Heatseekers!</h1>
-    </div>
-    <div class="container mt-auto py-3 bg-light fixed-bottom">
-        <div class="row">
-          <div class="col">
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a class="link-dark" href="#">Algemene voorwaarden</a>
-              </li>
-              <li class="list-inline-item">
-                <a class="link-dark" href="#">Colofon</a>
-              </li>
-              <li class="list-inline-item">
-                <a class="link-dark" href="#">Privacy Statement</a>
-              </li>
-              <li class="list-inline-item">
-                <a class="link-dark" href="#">Veelgestelde vragen</a>
-              </li>
-              <li class="list-inline-item">
-                <a class="link-dark" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col d-flex justify-content-end">
-            <ul class="list-inline">
-              <li class="list-inline-item"><i class="fab fa-facebook-f"></i></li>
-              <li class="list-inline-item"><i class="fab fa-twitter-square"></i></li>
-              <li class="list-inline-item"><i class="fab fa-instagram-square"></i></li>
-          </div>
+    <div class="container pt-4 pb-4">
+      <h1 class="display-4 mb-4">Welcome to Heatseekers!</h1>
+      <div class="row pb-4">
+        <div class="col">
+          <img src="img/tabasco.jpeg" class="img-fluid" alt="tabasco">
+          <blockquote class="blockquote text-center"><strong>Every Tabasco hot sauce, 50% off!</strong></blockquote>
+        </div>
+        <div class="col-6">
+          <img src="img/best_hot_sauces.jpeg" class="img-fluid" alt="tabasco">
+          <blockquote class="blockquote text-center"><strong>2020's best hot sauces!</strong></blockquote>
+        </div>
+        <div class="col">
+          <img src="img/tabasco.jpeg" class="img-fluid" alt="tabasco">
+          <blockquote class="blockquote text-center"><strong>Every Tabasco hot sauce, 50% off!</strong></blockquote>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <img src="img/tabasco.jpeg" class="img-fluid" alt="tabasco">
+        </div>
+        <div class="col-6">
+          <img src="img/best_hot_sauces.jpeg" class="img-fluid" alt="tabasco">
+        </div>
+        <div class="col">
+          <img src="img/tabasco.jpeg" class="img-fluid" alt="tabasco">
         </div>
       </div>
     </div>
+    <div class="container mt-auto py-3 mt-6 bg-light">
+      <div class="row">
+        <div class="col">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a class="link-dark" href="#">Algemene voorwaarden</a>
+            </li>
+            <li class="list-inline-item">
+              <a class="link-dark" href="#">Colofon</a>
+            </li>
+            <li class="list-inline-item">
+              <a class="link-dark" href="#">Privacy Statement</a>
+            </li>
+            <li class="list-inline-item">
+              <a class="link-dark" href="#">Veelgestelde vragen</a>
+            </li>
+            <li class="list-inline-item">
+              <a class="link-dark" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col d-flex justify-content-end">
+          <ul class="list-inline">
+            <li class="list-inline-item"><i class="fab fa-facebook-f"></i></li>
+            <li class="list-inline-item"><i class="fab fa-twitter-square"></i></li>
+            <li class="list-inline-item"><i class="fab fa-instagram-square"></i></li>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Bootstrap javascript -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
